feat: enhance Spring Boot Actuator health checks
- Add health check groups (readiness and liveness probes)
- Configure readiness checks: db, redis (where applicable), kafka, diskSpace, ping
- Configure liveness checks: ping, diskSpace
- Enable health checks for database, Redis, and Kafka
- Enable Kubernetes-style readiness/liveness endpoints
- All services now have comprehensive health monitoring

Phase 1, Task 5: Project & Infrastructure Setup - Part 5 (Complete)

--- a/customer-service/src/main/resources/application-local.yml
+++ b/customer-service/src/main/resources/application-local.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/openwallet
+    url: jdbc:postgresql://localhost:5433/openwallet
     username: openwallet
     password: openwallet
     driver-class-name: org.postgresql.Driver
@@ -35,6 +35,18 @@ management:
   endpoint:
     health:
       show-details: always
+      probes:
+        enabled: true
+      group:
+        readiness:
+          include: db,kafka,diskSpace,ping
+        liveness:
+          include: ping,diskSpace
+  health:
+    db:
+      enabled: true
+    kafka:
+      enabled: true
   metrics:
     export:
       prometheus:
