--- a/wallet-service/src/main/resources/application-local.yml
+++ b/wallet-service/src/main/resources/application-local.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/openwallet
+    url: jdbc:postgresql://localhost:5433/openwallet
     username: openwallet
     password: openwallet
     driver-class-name: org.postgresql.Driver
@@ -40,6 +40,20 @@ management:
   endpoint:
     health:
       show-details: always
+      probes:
+        enabled: true
+      group:
+        readiness:
+          include: db,redis,kafka,diskSpace,ping
+        liveness:
+          include: ping,diskSpace
+  health:
+    db:
+      enabled: true
+    redis:
+      enabled: true
+    kafka:
+      enabled: true
   metrics:
     export:
       prometheus:
