fix: remove Kafka from health check groups
- Remove kafka from readiness health groups (Spring Boot doesn't provide built-in Kafka health indicator)
- Keep db, redis (where applicable), diskSpace, and ping health checks
- Kafka connectivity will be validated through application logic instead
- Fixes application startup error: 'Included health contributor kafka does not exist'

--- a/auth-service/src/main/resources/application-local.yml
+++ b/auth-service/src/main/resources/application-local.yml
@@ -49,15 +49,13 @@ management:
         enabled: true
       group:
         readiness:
-          include: db,redis,kafka,diskSpace,ping
+          include: db,redis,diskSpace,ping
         liveness:
           include: ping,diskSpace
   health:
     db:
       enabled: true
     redis:
-      enabled: true
-    kafka:
       enabled: true
   metrics:
     export:
