fix: configure separate Flyway schema history tables per service
- Add `table` property to Flyway config for each service:
  - customer-service: flyway_customer_schema_history
  - wallet-service: flyway_wallet_schema_history
  - ledger-service: flyway_ledger_schema_history
  - notification-service: flyway_notification_schema_history
- Remove `ignore-missing-migrations` (no longer needed)
- Revert migration file names to independent versions per service:
  - wallet-service: V3__ → V1__create_wallets_table.sql
  - ledger-service: V4__ → V1__create_transactions_table.sql
  - ledger-service: V5__ → V2__create_ledger_entries_table.sql
  - notification-service: V6__ → V1__create_notifications_table.sql
- Each service now manages its own migrations independently
- Services can start in any order without migration conflicts
- Update PROGRESS.md with new configuration approach

Phase 2, Task 1: Core Domain & Schema Setup - Fix

--- a/customer-service/src/main/resources/application-local.yml
+++ b/customer-service/src/main/resources/application-local.yml
@@ -15,6 +15,7 @@ spring:
   flyway:
     enabled: true
     locations: classpath:db/migration
+    table: flyway_customer_schema_history
 
 kafka:
   bootstrap-servers: localhost:9092
