--- a/ledger-service/src/main/resources/application-local.yml
+++ b/ledger-service/src/main/resources/application-local.yml
@@ -15,6 +15,9 @@ spring:
   flyway:
     enabled: true
     locations: classpath:db/migration
+    table: flyway_ledger_schema_history
+    baseline-on-migrate: true
+    baseline-version: 0
 
 kafka:
   bootstrap-servers: localhost:9092
