--- a/wallet-service/pom.xml
+++ b/wallet-service/pom.xml
@@ -55,6 +55,7 @@
         <dependency>
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-core</artifactId>
+            <version>10.7.1</version>
         </dependency>
         <dependency>
             <groupId>org.flywaydb</groupId>
