--- a/wallet-service/src/main/resources/application-local.yml
+++ b/wallet-service/src/main/resources/application-local.yml
@@ -15,6 +15,9 @@ spring:
   flyway:
     enabled: true
     locations: classpath:db/migration
+    table: flyway_wallet_schema_history
+    baseline-on-migrate: true
+    baseline-version: 0
   data:
     redis:
       host: localhost
