--- a/customer-service/src/main/resources/application-local.yml
+++ b/customer-service/src/main/resources/application-local.yml
@@ -16,6 +16,8 @@ spring:
     enabled: true
     locations: classpath:db/migration
     table: flyway_customer_schema_history
+    baseline-on-migrate: true
+    baseline-version: 0
 
 kafka:
   bootstrap-servers: localhost:9092
