--- a/notification-service/src/test/resources/application-test.yml
+++ b/notification-service/src/test/resources/application-test.yml
@@ -17,6 +17,8 @@ spring:
 
 logging:
   level:
+    root: INFO
+    com.openwallet: DEBUG
     org.hibernate.SQL: DEBUG
     org.hibernate.type.descriptor.sql.BasicBinder: TRACE
 
