--- a/notification-service/src/main/resources/application-local.yml
+++ b/notification-service/src/main/resources/application-local.yml
@@ -30,6 +30,13 @@ kafka:
     value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
     auto-offset-reset: earliest
 
+spring:
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://localhost:8080/realms/openwallet
+
 management:
   endpoints:
     web:
