--- a/customer-service/src/test/resources/application-test.yml
+++ b/customer-service/src/test/resources/application-test.yml
@@ -14,6 +14,12 @@ spring:
         format_sql: true
   flyway:
     enabled: false
+  # Disable OAuth2 resource server validation in tests - we use mock JWTs
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://localhost:8080/realms/openwallet
 
 logging:
   level:
