feat: implement authentication and user management features
- Add Kafka configuration for user lifecycle events to enable event-driven architecture.
- Implement Keycloak configuration for user management and authentication.
- Create AuthController with endpoints for user registration, login, token refresh, and logout.
- Develop AuthService to handle user operations and publish events to Kafka.
- Introduce custom exceptions for user-related errors and an exception handler for consistent error responses.
- Enhance application configuration for Keycloak integration and document setup instructions in KEYCLOAK_SETUP.md.

--- a/auth-service/pom.xml
+++ b/auth-service/pom.xml
@@ -73,6 +73,11 @@
             <artifactId>keycloak-spring-boot-starter</artifactId>
             <version>23.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.keycloak</groupId>
+            <artifactId>keycloak-admin-client</artifactId>
+            <version>23.0.0</version>
+        </dependency>
 
         <!-- Utilities -->
         <dependency>
