feat: add integration test module with TestContainers support
- Introduced a new integration test module to facilitate end-to-end testing of the OpenWallet microservices platform.
- Implemented InfrastructureManager to manage PostgreSQL, Kafka, and Keycloak containers using TestContainers.
- Created IntegrationTestBase as a base class for integration tests, providing dynamic property configuration for Spring Boot.
- Added InfrastructureTest to verify the startup of infrastructure containers and ensure accessible connection strings.
- Documented the integration test setup and usage in the new README.md file.

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>wallet-service</module>
         <module>ledger-service</module>
         <module>notification-service</module>
+        <module>integration-test</module>
     </modules>
 
     <properties>
@@ -33,6 +34,7 @@
         <mapstruct.version>1.5.5.Final</mapstruct.version>
         <junit.version>5.10.0</junit.version>
         <mockito.version>5.6.0</mockito.version>
+        <testcontainers.version>1.19.3</testcontainers.version>
     </properties>
 
     <dependencyManagement>
@@ -79,6 +81,11 @@
             <dependency>
                 <groupId>com.openwallet</groupId>
                 <artifactId>notification-service</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.openwallet</groupId>
+                <artifactId>integration-test</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
