chore: update POM files for microservices
- Added packaging type as 'jar' to auth-service, customer-service, ledger-service, notification-service, and wallet-service POM files.
- Updated Java version in the main POM file to 17 for consistency across modules.
- Added repackage execution goal to the spring-boot-maven-plugin in multiple service POM files to ensure proper JAR packaging.

--- a/integration-test/pom.xml
+++ b/integration-test/pom.xml
@@ -27,6 +27,7 @@
             <groupId>com.openwallet</groupId>
             <artifactId>auth-service</artifactId>
             <version>${project.version}</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.openwallet</groupId>
@@ -144,6 +145,7 @@
     </dependencies>
 
     <build>
+
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -155,6 +157,7 @@
                     </includes>
                 </configuration>
             </plugin>
+
         </plugins>
     </build>
 
