--- a/auth-service/pom.xml
+++ b/auth-service/pom.xml
@@ -14,6 +14,7 @@
     <artifactId>auth-service</artifactId>
     <name>Auth Service</name>
     <description>Authentication and authorization service</description>
+    <packaging>jar</packaging>
 
     <dependencies>
         <!-- Spring Boot Starters -->
@@ -137,6 +138,13 @@
                         </exclude>
                     </excludes>
                 </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
