--- a/ledger-service/pom.xml
+++ b/ledger-service/pom.xml
@@ -14,6 +14,7 @@
     <artifactId>ledger-service</artifactId>
     <name>Ledger/Transactions Service</name>
     <description>Transaction processing and double-entry ledger service</description>
+    <packaging>jar</packaging>
 
     <dependencies>
         <!-- Spring Boot Starters -->
@@ -136,6 +137,13 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
                 <configuration>
                     <excludes>
                         <exclude>
