--- a/notification-service/pom.xml
+++ b/notification-service/pom.xml
@@ -14,6 +14,7 @@
     <artifactId>notification-service</artifactId>
     <name>Notification Service</name>
     <description>Event-driven notification service</description>
+    <packaging>jar</packaging>
 
     <dependencies>
         <!-- Spring Boot Starters -->
@@ -111,6 +112,13 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
                 <configuration>
                     <excludes>
                         <exclude>
