--- a/wallet-service/pom.xml
+++ b/wallet-service/pom.xml
@@ -11,9 +11,12 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
+
+
     <artifactId>wallet-service</artifactId>
     <name>Wallet Service</name>
     <description>Wallet lifecycle and state management service</description>
+    <packaging>jar</packaging>
 
     <dependencies>
         <!-- Spring Boot Starters -->
@@ -143,6 +146,13 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
                 <configuration>
                     <excludes>
                         <exclude>
