feat: enhance user registration response and Keycloak configuration
- Updated AuthService to include username and email in the registration response for improved user information.
- Modified integration tests to verify the correct publication of user registration events and added checks for event details.
- Configured Keycloak properties to manage required actions and email verification settings.

--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,6 @@ dump.rdb
 
 AUTHENTICATION_GAP_ANALYSIS.md
 AUTHENTICATION_GAP_SUMMARY.md
+integration-test/src/test/resources/keycloak-realm.json
+integration-test/src/test/resources/openwallet-realm.json
+integration-test/src/test/resources/openwallet-realm2.json
