feat: enhance integration tests and update dependencies
- Added new integration tests for customer profile CRUD operations, KYC verification flow, and wallet CRUD operations to ensure comprehensive coverage of functionalities.
- Updated the .gitignore file to include new test resource files.
- Upgraded Testcontainers dependency version in the POM files for improved testing capabilities.
- Refactored auth-service dependencies to utilize Spring Boot OAuth2 components for better security management.
- Implemented new methods in TestHttpClient for PUT requests to streamline test code.

--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,7 @@ AUTHENTICATION_GAP_SUMMARY.md
 integration-test/src/test/resources/keycloak-realm.json
 integration-test/src/test/resources/openwallet-realm.json
 integration-test/src/test/resources/openwallet-realm2.json
+integration-test/NEXT_STEPS_KYC.md
+integration-test/REALITY_CHECK.md
+integration-test/SIMPLE_CRUD_TESTS_STRATEGY.md
+integration-test/SERVICE_LAYER_AUDIT.md
