chore: update .gitignore and remove obsolete integration test documentation
- Added new documentation files to .gitignore to prevent unnecessary tracking of generated test resources.
- Removed outdated files  to streamline the integration test suite and eliminate clutter.

--- a/.gitignore
+++ b/.gitignore
@@ -141,3 +141,19 @@ integration-test/NEXT_STEPS_KYC.md
 integration-test/REALITY_CHECK.md
 integration-test/SIMPLE_CRUD_TESTS_STRATEGY.md
 integration-test/SERVICE_LAYER_AUDIT.md
+integration-test/docs/USER_ONBOARDING_FLOW_ANALYSIS.md
+integration-test/docs/TEST_OPTIMIZATION_GUIDE.md
+integration-test/docs/SIMPLE_CRUD_TESTS_STRATEGY.md
+integration-test/docs/SERVICE_LAYER_AUDIT.md
+integration-test/docs/REALITY_CHECK.md
+integration-test/docs/PRE_FLIGHT_CHECKLIST.md
+integration-test/docs/NEXT_STEPS_KYC.md
+integration-test/docs/KEYCLOAK_TESTS.md
+integration-test/docs/KEYCLOAK_CONFIGURATION.md
+integration-test/docs/INTEGRATION_TEST_ROADMAP.md
+integration-test/docs/CLEANUP_SUMMARY.md
+GAP_ANALYSIS_AUTH_CUSTOMER_WALLET_KYC.md
+GAP_ANALYSIS_SUMMARY.md
+IMPLEMENTATION_PLAN_BALANCE_AND_LIMITS.md
+IMPLEMENTATION_SUMMARY.md
+TASK_CHECKLIST.md
