feat: add balance reconciliation feature and improve JWT utility methods
- Introduced a new method in JwtUtils to retrieve the raw JWT token value for use in service interactions.
- Added a balance reconciliation endpoint in WalletController, allowing users to reconcile wallet balances with customer IDs.
- Implemented exception handling for reconciliation errors in WalletExceptionHandler to ensure proper error responses.
- Updated application configuration to include a base URL for the ledger service.

--- a/wallet-service/src/main/resources/application-local.yml
+++ b/wallet-service/src/main/resources/application-local.yml
@@ -42,6 +42,11 @@ spring:
         jwt:
           issuer-uri: http://localhost:8080/realms/openwallet
 
+app:
+  services:
+    ledger:
+      base-url: http://localhost:9004
+
 management:
   endpoints:
     web:
