--- a/ledger-service/src/test/resources/application-test.yml
+++ b/ledger-service/src/test/resources/application-test.yml
@@ -14,6 +14,11 @@ spring:
         format_sql: true
   flyway:
     enabled: false
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: https://test-issuer
 
 logging:
   level:
